--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,4 +21,9 @@
       Login
     </button>
   </form>
+
+  <!-- Link do resetu hasła -->
+  <div style="margin-top: 16px; text-align: center;">
+    <a routerLink="/forgot-password">Forgot your password?</a>
+  </div>
 </mat-card>
