--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -4,7 +4,7 @@
     <mat-form-field appearance="outline">
       <mat-label>Current Password</mat-label>
       <input matInput formControlName="currentPassword" type="password" required />
-      <mat-error *ngIf="changePasswordForm.get('currentPassword')?.invalid && changePasswordForm.get('currentPassword')?.touched">
+      <mat-error *ngIf="changePasswordForm.get('currentPassword')?.invalid">
         Current password is required.
       </mat-error>
     </mat-form-field>
@@ -12,8 +12,19 @@
     <mat-form-field appearance="outline">
       <mat-label>New Password</mat-label>
       <input matInput formControlName="newPassword" type="password" required minlength="6" />
-      <mat-error *ngIf="changePasswordForm.get('newPassword')?.invalid && changePasswordForm.get('newPassword')?.touched">
+      <mat-error *ngIf="changePasswordForm.get('newPassword')?.invalid">
         New password must be at least 6 characters long.
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Confirm Password</mat-label>
+      <input matInput formControlName="confirmPassword" type="password" required />
+      <mat-error *ngIf="changePasswordForm.get('confirmPassword')?.invalid">
+        Confirm password is required.
+      </mat-error>
+      <mat-error *ngIf="changePasswordForm.hasError('passwordMismatch')">
+        Passwords do not match.
       </mat-error>
     </mat-form-field>
 
